<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login1"
    android:background="@drawable/grayscale">


    <TextView
        android:id="@+id/hello_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/hello"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_there" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_round"
        android:drawableEnd="@drawable/sharp_visibility_off_white_18dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/forgot_password"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="122dp"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#1925C4"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_login"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/not_member"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/register2_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="65dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#1925C4"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>