<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login1"
    android:background="@drawable/grayscale"
    >


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="327dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/genius"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_bold"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <Button
        android:id="@+id/register_button"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:background="@drawable/button2_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>